added some responsiveness

--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ a {
   padding: 0;
   height: 96vh;
   background-image: url("../images/bg.jpg");
+  background-size: cover;
 }
 
 .about {
@@ -53,5 +54,17 @@ a {
 
 .about p a {
   color: #b80071;
+}
+
+@media screen and (max-width: 1400px) {
+  .about {
+    width: 100%;
+    height: 55vh;
+    -webkit-clip-path: polygon(0 0, 100% 0, 100% 100%, 0 60%);
+            clip-path: polygon(0 0, 100% 0, 100% 100%, 0 60%);
+  }
+  .about h1, .about p {
+    width: 100%;
+  }
 }
 /*# sourceMappingURL=main.css.map */
